cabal-version:      3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.

name:               hsh
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Hash algorithm implementations
homepage:           https://github.com/Kafva/hsh
license:            MIT
license-file:       LICENSE
author:             Kafva
maintainer:         36083692+Kafva@users.noreply.github.com
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wmissing-export-lists
                 -Wmissing-home-modules
                 -Wpartial-fields
                 -Wredundant-constraints

executable hsh
    import:           warnings
    main-is:          Main.hs
    other-modules:    Md5
                      Sha1
                      Sha256
                      Hmac
                      Pbkdf2
                      Template
                      Types
                      Log
                      Util
    build-depends:    base >=4.17.0.0,
                      bytestring,
                      binary,
                      template-haskell,
                      process,
                      mtl
    hs-source-dirs:   src
    default-language: GHC2021
